--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,4 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="app_name">VPEUB</string>
+    <string name="title_activity_start">Starting VPEUB </string>
+    <string name="action_settings">Settings</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="comp_file">local.tar.lzma</string>
+    <string name="busybox_file">busybox</string>
+    <string name="tar_file">local.tar</string>
+    <string name="folder_file">local</string>
+    <item type="integer" name="no_of_files">1724</item>
+    <item type="integer" name="folder_size">518363711</item>
+    <string name="start_text_notready">Welcome to VPEUB\nInitializing Environment \n( This needs to be done only once )</string>
+    <string name="env_ready">The Programming Environment is Set up and Ready to use</string>
+    <string name="have_fun">Have Fun !</string>
+    <string name="start_button_text">Start Visual Programming</string>
+	<string name="copy_compressed">Copying Compressed Files</string>
+	<string name="copy_busybox">Copying BusyBox</string>
+	<string name="unzip">Decompressing Files</string>
+	
 </resources>
