--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="title_activity_start">Starting VPEUB </string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-    <string name="comp_file">local.tar.lzma</string>
+    <string name="comp_file">archive.tar.lzma</string>
     <string name="busybox_file">busybox</string>
     <string name="tar_file">local.tar</string>
     <string name="folder_file">local</string>
@@ -18,6 +18,7 @@
     <string name="variant_folder">variants</string>
    	<string name="remove_all">rm -R *</string>
    	<string name="core_file">core.a</string>
+   	<string name="elf_name">final</string>
    	
 
     <item name="no_of_files" type="integer">1724</item>
